= master

* Deprecate rendering templates outside of render plugin :allowed_paths option by default (jeremyevans)

* Deprecate :cache=>nil/false render plugin option overriding :cache render/view method option (jeremyevans)

* Deprecate using :header matcher in header_matchers plugin without :header_matcher_prefix app option (jeremyevans)

* Deprecate using content_for multiple times with the same key in the content_for plugin unless :append plugin option is used (jeremyevans)

* Deprecate use of :host matcher with regexp value in header_matchers plugin without :host_matcher_captures app option (jeremyevans)

* Deprecate view_options plugin locals handling, move to the new branch_locals plugin (jeremyevans)

* Deprecate render plugin locals handling, move to the new render_locals plugin (jeremyevans)

* Deprecate the :ext render method and plugin option (jeremyevans)

* Deprecate the view_subdirs plugin alias for the view_options plugin (jeremyevans)

* Deprecate Stream#callback in the streaming plugin (jeremyevans)

* Deprecate the automatic support for EventMachine in the streaming plugin (jeremyevans)

* Deprecate static_path_info plugin, which has been a no-op in Roda 2 (jeremyevans)

* Deprecate render plugin :escape option loading Erubis escaping support (jeremyevans)

* Deprecate the per_thread_caching plugin (jeremyevans)

* Deprecate the websockets plugin (jeremyevans)

* Deprecate treating unsupported matchers as always matching (jeremyevans)

* Deprecate ignoring unsupported match block return values (jeremyevans)

* Deprecate the :format, :opt, and :optd default symbol matchers in the symbol_matchers plugin (jeremyevans)

* Deprecate use of placeholders in string matchers by default, add placeholder_string_matchers plugin for it (jeremyevans)

= 2.28.0 (2017-07-14)

* Deprecate unneeded internal constants (jeremyevans)

* Optimize for ruby 2.3+ using frozen string literals instead of constants (jeremyevans)
